Update phone screen navigation icons

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
       <div class="container">
       <header id="header" role="banner">
         <h1>Gemiini Academy</h1>
-        <a class="toggle open" href="#sidebar">></a>
-        <a class="toggle open" href="#nav">toggle nav</a>
+        <a class="toggle open" href="#nav"><img id="phone-nav" src="./images/phone-nav.png"></a>
       </header>
 
       <nav id="nav" role="navigation">
