Update sidebar navigation icons

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </ul>
       </sidebar>
 
-      <section class="content" role="main">
+      <div class="content" role="main" id="content-wrapper" style="grid-column: span 5; overflow-y: auto;">
         <h2>Welcome!</h2>
         <section class="buttons" role="navigation">
           <a href="./docs/main.html" class="button">Getting Started and Gemiini Guides</a>
@@ -52,7 +52,7 @@
           <a href="https://learn.gemiini.org/authority/help/schedule" class="button">Schedule a Call with a Product Specialist</a>
           <a href="./resources/main.html" class="button">Additional Resources</a>
         </section>
-      </section>
+      </div>
 
       <footer id="footer" role="footer">
         <a href="https://gemiini.org/#/get-started">gemiini.org</a>
