Add anchor links in sidebar

--- a/resources/main.html
+++ b/resources/main.html
@@ -11,8 +11,8 @@
       <div class="container">
       <header id="header" role="banner">
         <h1>Gemiini Academy</h1>
-        <a class="toggle open" href="#sidebar">></a>
-        <a class="toggle open" href="#nav">toggle nav</a>
+        <a class="toggle open" href="#sidebar"><img id="sidebar-phone" src="../images/sidebar-phone.png"></a>
+        <a class="toggle open" href="#nav"><img id="phone-nav" src="../images/phone-nav.png"></a>
       </header>
 
       <nav id="nav" role="navigation">
@@ -31,7 +31,7 @@
       </nav>
 
       <sidebar id="sidebar" role="navigation">
-        <a class="toggle close" href="#">X</a>
+        <a class="toggle close" href="#"><img id="close-sidebar-phone" src="../images/close-sidebar-phone.png"></a>
         <ul>
             <li>Testimonials</li>
             
